[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Slots.gd" type="Script" id=2]
[ext_resource path="res://Assets/Bangers-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/cross.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 3 )

[node name="Slots" type="Node2D"]
script = ExtResource( 2 )

[node name="Slot1" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Slot1"]
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Slot1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot1"]
shape = SubResource( 1 )

[node name="Slot2" type="Area2D" parent="."]
position = Vector2( 0, -100 )

[node name="Sprite" type="Sprite" parent="Slot2"]
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Slot2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot2"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Slot2"]
margin_left = -114.035
margin_top = 158.021
margin_right = 140.965
margin_bottom = 186.021
custom_fonts/font = SubResource( 2 )
text = "Press up or Down to select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="Area2D" parent="."]
position = Vector2( 0, -200 )

[node name="Sprite" type="Sprite" parent="Slot3"]
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Slot3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot3"]
shape = SubResource( 1 )
[connection signal="input_event" from="Slot1" to="." method="_on_Slot1_input_event"]
[connection signal="input_event" from="Slot2" to="." method="_on_Slot2_input_event"]
[connection signal="input_event" from="Slot3" to="." method="_on_Slot3_input_event"]
